// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag match snapshot Tag simple 1`] = `
<div>
  <span
    class="tag--color__neutral css-1laa4dw"
  >
    <span
      class="tag--label"
    >
      Hello world
    </span>
  </span>
</div>
`;

exports[`Tag match snapshot TagColor 1`] = `
<div>
  <span
    class="tag--color__red css-1laa4dw"
  >
    <span
      class="tag--label"
    >
      Hello world
    </span>
  </span>
</div>
`;

exports[`Tag match snapshot TagOnIconClick 1`] = `
<div>
  <span
    class="tag--color__neutral css-1laa4dw"
  >
    <span
      class="tag--label"
    >
      Hello world
    </span>
    <button
      class="css-azzcl5"
    >
      <ion-icon
        name="close"
      />
    </button>
  </span>
</div>
`;
